--- a/cssgrid/mod4-projetoWildbeast/index.html
+++ b/cssgrid/mod4-projetoWildbeast/index.html
@@ -55,7 +55,7 @@
 
             <img class="imagem-1" src="img/wolf1.jpg" alt="Wolf1">
             
-            <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
+            <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
 
             <img class="imagem-2" src="img/wolf2.jpg" alt="Wolf2">
 
@@ -95,7 +95,7 @@
         </aside>
 
         <footer class="footer">
-            <p>Soraphya © 2017 - 2021. Alguns direitos reservados.</p>
+            <p>Soraphya © 2021. Alguns direitos reservados.</p>
         </footer>
 
     </div>
