--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -57,5 +57,51 @@
         </div>
         <a href="#">Saiba mais</a>
     </section>
+
+    <section>
+        <div>
+            <img src="img/botafogo.jpg" alt="Brafe botafogo">
+            <div>
+                <h2>Botafogo</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
+        <div>
+            <img src="img/iguatemi.jpg" alt="Brafe iguatemi">
+            <div>
+                <h2>Iguatemi</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
+        <div>
+            <img src="img/mineirao.jpg" alt="Brafe mineirao">
+            <div>
+                <h2>Mineirão</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <div>
+                <h2>Assine Nossa Newsletter</h2>
+                <p>Promoções e eventos mensais</p>
+            </div>
+            <form>
+                <label>E-mail</label>
+                <input type="email" placeholder="Digite seu E-mail">
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <p>Este é um projeto de leonardoanthony.dev</p>
+        <img src="img/brafe.png" alt="Brafé">
+    </footer>
 </body>
 </html>
