--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -8,16 +8,19 @@
     <title>Brafé</title>
 </head>
 <body>
-    <header>
-        <a href="#"><img src="img/brafe.png" alt="Brafé"></a>
-        <nav>
-            <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="menu">
+        <div class="container">
+            <a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>
+            <nav class="menu-nav">
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#">Portfólio</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="clear"></div>
     </header>
 
     <main>
