--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -23,7 +23,7 @@
         <div class="clear"></div>
     </header>
 
-    <main>
+    <main class="intro">
         <h1>Café com a cara <br>do Brasil</h1>
         <p>Direto das fazendas de Minas Gerais</p>
     </main>
