--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -63,30 +63,33 @@
         <a href="#">Saiba mais</a>
     </section>
 
-    <section>
-        <div>
+    <section class="locais container">
+        <div class="locais-item">
             <img src="img/botafogo.jpg" alt="Brafe botafogo">
             <div>
                 <h2>Botafogo</h2>
                 <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
                 <a href="#">Ver mapa</a>
             </div>
+            <div class="clear"></div>
         </div>
-        <div>
+        <div class="locais-item">
             <img src="img/iguatemi.jpg" alt="Brafe iguatemi">
             <div>
                 <h2>Iguatemi</h2>
                 <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
                 <a href="#">Ver mapa</a>
             </div>
+            <div class="clear"></div>
         </div>
-        <div>
+        <div class="locais-item">
             <img src="img/mineirao.jpg" alt="Brafe mineirao">
             <div>
                 <h2>Mineirão</h2>
                 <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo</p>
                 <a href="#">Ver mapa</a>
             </div>
+            <div class="clear"></div>
         </div>
     </section>
 
