--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -93,9 +93,9 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <div>
+    <section class="assine">
+        <div class="container">
+            <div class="assine-info">
                 <h2>Assine Nossa Newsletter</h2>
                 <p>Promoções e eventos mensais</p>
             </div>
@@ -104,12 +104,16 @@
                 <input type="email" placeholder="Digite seu E-mail">
                 <button type="submit">Enviar</button>
             </form>
+            <div class="clear"></div>
         </div>
     </section>
 
-    <footer>
-        <p>Este é um projeto de leonardoanthony.dev</p>
-        <img src="img/brafe.png" alt="Brafé">
+    <footer class="footer">
+        <div class="container">
+            <p>Este é um projeto de leonardoanthony.dev <br>com Soraphya Tech</p>
+            <img src="img/brafe.png" alt="Brafé">
+            <div class="clear"></div>
+        </div>
     </footer>
 </body>
 </html>
