--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <section class="produtos">
-        <div class="container">
+        <div class="container produtos-container">
             <div class="produtos-item">
                 <h2 class="produtos-paulista">Paulista</h2>
                 <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
