--- a/css_avancado/brafé-1-puro/index.html
+++ b/css_avancado/brafé-1-puro/index.html
@@ -91,10 +91,11 @@
             </div>
             <div class="clear"></div>
         </div>
+        <div class="clear"></div>
     </section>
 
     <section class="assine">
-        <div class="container">
+        <div class="container assine-container">
             <div class="assine-info">
                 <h2>Assine Nossa Newsletter</h2>
                 <p>Promoções e eventos mensais</p>
@@ -109,7 +110,7 @@
     </section>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <p>Este é um projeto de leonardoanthony.dev <br>com Soraphya Tech</p>
             <img src="img/brafe.png" alt="Brafé">
             <div class="clear"></div>
