--- a/css_avancado/brafe-1-grid/index.html
+++ b/css_avancado/brafe-1-grid/index.html
@@ -32,11 +32,11 @@
 	<section class="sobre">
 		<h2>Uma Mistura de</h2>
 		<div class="container">
-			<div class="sobre-item">
+			<div class="sobre-item grid-6">
 				<img src="img/cafe-1.jpg">
 				<h3>amor</h3>
 			</div>
-			<div class="sobre-item">
+			<div class="sobre-item grid-6">
 				<img src="img/cafe-2.jpg">
 				<h3>perfeição</h3>
 			</div>
