--- a/javascript/mod3/0302-12_projeto-pt1/index.html
+++ b/javascript/mod3/0302-12_projeto-pt1/index.html
@@ -20,8 +20,8 @@
     </nav>
 
     <section class="grid-section animais" id="animais">
-        <h1 class="titulo">Animais Fantásticos</h1>
-        <ul>
+        <h1 class="titulo">Animais <br> Fantásticos</h1>
+        <ul class="animais-lista">
             <li><img src="img/imagem1.jpg"></li>
             <li><img src="img/imagem2.jpg"></li>
             <li><img src="img/imagem3.jpg"></li>
@@ -76,8 +76,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam assumenda, ullam maiores adipisci dolorum a? Quidem quam obcaecati quaerat quae?</dd>
             <dt>Eles são fantásticos?</dt>
@@ -90,7 +90,7 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png">
         </div>
