--- a/javascript/mod3/0302-12_projeto-pt1/index.html
+++ b/javascript/mod3/0302-12_projeto-pt1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animais Fantásticos</title>
+    <script>document.documentElement</script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display+SC">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +22,7 @@
 
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais <br> Fantásticos</h1>
-        <ul class="animais-lista">
+        <ul class="animais-lista js-tabmenu">
             <li><img src="img/imagem1.jpg"></li>
             <li><img src="img/imagem2.jpg"></li>
             <li><img src="img/imagem3.jpg"></li>
@@ -29,7 +30,7 @@
             <li><img src="img/imagem5.jpg"></li>
             <li><img src="img/imagem6.jpg"></li>
         </ul>
-        <div class="animais-descricao">
+        <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ut nisi explicabo quas neque sit provident voluptates debitis, corporis ducimus at, nobis unde repudiandae?</p>
