--- a/javascript/mod3/0302-12_projeto-pt1/index.html
+++ b/javascript/mod3/0302-12_projeto-pt1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animais Fantásticos</title>
-    <script>document.documentElement</script>
+    <script>document.documentElement.classList.add('js');</script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display+SC">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -78,7 +78,7 @@
 
     <section class="grid-section faq" id="faq">
         <h1 class="titulo">FAQ</h1>
-        <dl class="faq-lista">
+        <dl class="faq-lista js-accordionList">
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam assumenda, ullam maiores adipisci dolorum a? Quidem quam obcaecati quaerat quae?</dd>
             <dt>Eles são fantásticos?</dt>
